add font styles to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>One Page Static Website</title>
+        <!-- font styles -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Days+One&family=Lato:wght@400;700&family=Montserrat:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
+        <!-- website styles -->
         <link rel="stylesheet" href="./css/styles.css">
     </head>
 
@@ -36,7 +41,12 @@
             <div class="footer__footerSiteNavigation">Site Navigation </div>
             <div class="footer__footerTermsAndConditions">Terms And Conditions</div>
             <div class="footer__footerCopyright">Copyright</div>
-            <div class="footer__footerDeveloper">Developer</div>
+            <div class="footer__footerDeveloper">
+                <p class="footer__footerDeveloperParagraph paragraph paragraph--footerDeveloper">
+                    <span>designed and developed by:</span>
+                    <br><span>Schalk van Dyk &rarr;</span>
+                </p>
+            </div>
         </footer>
 
         <!-- import an external script app.js -->
