add flex row and column mixins

--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
             <div class="footer__footerSocialMedia">Social Media</div>
             <div class="footer__footerSiteNavigation">Site Navigation </div>
             <div class="footer__footerTermsAndConditions">Terms And Conditions</div>
-            <div class="footer__footerCopyright">Copyright</div>
-            <div class="footer__footerDeveloper">
+            <div class="footer__footerCopyrightAndDevContainer">
+                <p class="footer__footerCopyrightParagraph paragraph paragraph--footerCopyright">Copyright &copy: 2024 Nylstroom Pest Control</p>
+                
                 <p class="footer__footerDeveloperParagraph paragraph paragraph--footerDeveloper">
                     <span>designed and developed by:</span>
-                    <br><span>Schalk van Dyk &rarr;</span>
+                    <span>Schalk van Dyk &rarr;</span>
                 </p>
             </div>
         </footer>
