add structure, content and styling for footerDeveloperParagraph

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                 
                 <p class="footer__footerDeveloperParagraph paragraph paragraph--footerDeveloper">
                     <span>designed and developed by:</span>
-                    <span>Schalk van Dyk &rarr;</span>
+                    <a href="https://schalkvandyk.com" target="_blank">
+                        <span class="paragraph paragraph--footerDeveloperName">Schalk van Dyk &rarr;</span>
+                    </a>
                 </p>
             </div>
         </footer>
