--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!-- font styles -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Days+One&family=Lato:wght@400;700&family=Montserrat:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Days+One&family=Lato:wght@400;700;900&family=Montserrat:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
         <!-- website styles -->
         <link rel="stylesheet" href="./css/styles.css">
     </head>
