add structure, content and styles to services section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,76 @@
 
         <main class="main">
             <section class="main__about">About Section</section>
-            <section class="main__products">Services Section</section>
+            <section class="main__services services">
+                <h2 class="services__headingH2 headingH2 headingH2--services">Our Serivces</h2>
+                <p class="services__paragraph paragraph paragraph--services">Discover comprehensive 
+                    pest management at Nylstroom Pest Control. Our services range from specialized 
+                    IPM programs for food and health industries to commercial and domestic pest 
+                    control, rodent control, termite management, and efficient fumigation services. 
+                    Safeguard your space with our tailored solutions!</p>
+                <div class="services__sectionContentWrapper">
+                    <ul class="services__servicesList">
+                        <li class="services__servicesListItem">
+                            <h3 class="services__headingH3 headingH3 headingH3--servicesListItemHeading">IPM Programs for Food & Health Industries</h3>
+                            <p class="services__paragraph paragraph paragraph--servicesListItemParagraph">Elevate 
+                            hygiene standards with our Integrated Pest Management (IPM) programs 
+                            tailored for the food and health industries.</p>
+                        </li>
+                        <li class="services__servicesListItem">
+                            <h3 class="services__headingH3 headingH3 headingH3--servicesListItemHeading">Commercial & Domestic Pest 
+                                Control</h3>
+                            <p class="services__paragraph paragraph paragraph--servicesListItemParagraph">From businesses to homes, our expert services 
+                                effectively eliminate pests, ensuring a pest-free environment. </p>
+                        </li>
+                        <li class="services__servicesListItem">
+                            <h3 class="services__headingH3 headingH3 headingH3--servicesListItemHeading">Rodent Control & Termite Management</h3>
+                            <p class="services__paragraph paragraph paragraph--servicesListItemParagraph">Our expert 
+                                rodent control strategies and termite management solutions ensure the complete 
+                                eradication of these pests, protecting your property from damage and potential 
+                                health hazards.</p>
+                        </li>
+                        <li class="services__servicesListItem">
+                            <h3 class="services__headingH3 headingH3 headingH3--servicesListItemHeading">Efficient Fumigation Services</h3>
+                            <p class="services__paragraph paragraph paragraph--servicesListItemParagraph">Our skilled team employs cutting-edge techniques 
+                                to eliminate pest infestations with efficient and reliable fumigation services.</p>
+                        </li>
+                        <li class="services__servicesListItem">
+                            <h3 class="services__headingH3 headingH3 headingH3--servicesListItemHeading">Comprehensive Pest Solutions</h3>
+                            <p class="services__paragraph paragraph paragraph--servicesListItemParagraph">From common 
+                                nuisances like ants, cockroaches, and mosquitoes to more persistent 
+                                threats such as termites, rodents, and bed bugs, our services extend to cover a 
+                                diverse range of pests. We specialize in effective control measures for flies, 
+                                wasps, fleas, and moths, ensuring a pest-free environment. Additionally, our 
+                                expertise extends to store product pests, weed control, and bird proofing. </p>
+                        </li>
+                    </ul>
+                    <a class="services__servicesDetailItem" href="#contactLink" target="_blank">
+                        <button class="btn btn--secondary">How It Works</button>
+                    </a>
+                    <article class="services__servicesArticle services__servicesArticle--serviceArea">
+                        <h3 class="services__serviceArticleHeadingH3 headingH3 headingH3--mobileservices">Serving Your Waterberg Community</h3>
+                        <img class="services__serviceArticleImage" src="./img/Images/WebsiteImages/NylstroomPestWaterbergServiceAreasBigMap.webp" alt="">
+                        <p class="services__serviceArticleIntroParagraph paragraph paragraph--serviceArea">Our dedicated 
+                            team is committed to creating pest-free environments, ensuring the well-being 
+                            of your Waterberg community. Trust us for effective and reliable pest control tailored 
+                            to your local needs. Nylstroom Pest Control proudly extends its services to 
+                            the following Wateberg service areas: </p>
+                        <article class="services__servicesArticleAreasListContainer">
+                            <h4 class="services__headingH4 headingH4 headingH4--serviceAreasHeading">Waterberg Service Areas:</h4>
+                            <ul>
+                                <li><p class="services__paragraph paragraph paragraph--serviceAreaName"><span class="paragraph__serviceAreaName--warmbad">Bela-Bela</span> (Warmbad),</p></li>
+                                <li><p class="services__paragraph paragraph paragraph--serviceAreaName"><span class="paragraph__serviceAreaName--nylstroom">Modimolle</span> (Nylstroom),</p></li>
+                                <li><p class="services__paragraph paragraph paragraph--serviceAreaName"><span class="paragraph__serviceAreaName--nylstroom">Vaalwater</span>,</p></li>
+                                <li><p class="services__paragraph paragraph paragraph--serviceAreaName"><span class="paragraph__serviceAreaName--naboom">Mookgopong</span> (Naboomspruit),</p></li>
+                                <li><p class="services__paragraph paragraph paragraph--serviceAreaName"><span class="paragraph__serviceAreaName--leeupoort">Leeupoort</span>.</p></li>
+                            </ul>
+                        </article>
+                        <a class="services__servicesDetailItem" href="#contactLink" target="_blank">
+                            <button class="btn btn--secondary">Contact Us</button>
+                        </a>
+                    </article>
+                </div>
+            </section>
             <section class="main__process">How-it-works Section</section>
         </main>
         
