add structure, content and styles to process section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <main class="main">
             <section class="main__about">About Section</section>
             <section class="main__services services">
-                <h2 class="services__headingH2 headingH2 headingH2--services">Our Serivces</h2>
+                <h2 class="services__headingH2 headingH2 headingH2--services">Our Services</h2>
                 <p class="services__paragraph paragraph paragraph--services">Discover comprehensive 
                     pest management at Nylstroom Pest Control. Our services range from specialized 
                     IPM programs for food and health industries to commercial and domestic pest 
@@ -92,7 +92,36 @@
                     </article>
                 </div>
             </section>
-            <section class="main__process">How-it-works Section</section>
+            <section class="main__process process">
+                <h2 class="process__headingH2 headingH2 headingH2--process">Process &rarr; <br/>How it works</h2>
+                <p class="process__paragraph paragraph paragraph--process">We follow
+                    best practices from the inspection, and treatment, to the follow-up process. 
+                </p>
+                <div class="process__sectionContentWrapper">
+                    <ul class="process__processList">
+                        <li class="process__processListItem">
+                            <h3 class="process__headingH3 headingH3 headingH3--processListItemHeading">Inspection</h3>
+                            <p class="process__paragraph paragraph paragraph--processListItemParagraph">Our service 
+                                begins with a thorough inspection. We look for pest activity, entry points, and 
+                                conducive conditions, so we know exactly what pest problems are causing 
+                                issues at your premises.</p>
+                        </li>
+                        <li class="process__processListItem">
+                            <h3 class="process__headingH3 headingH3 headingH3--processListItemHeading">Treatment</h3>
+                            <p class="process__paragraph paragraph paragraph--processListItemParagraph">Our general 
+                                premises pest control process, targets common pests that infests the premises. We'll 
+                                treat areas both inside and outside to eliminate and prevent basic 
+                                pests.</p>
+                        </li>
+                        <li class="process__processListItem">
+                            <h3 class="process__headingH3 headingH3 headingH3--processListItemHeading">Follow-Up</h3>
+                            <p class="process__paragraph paragraph paragraph--processListItemParagraph">Follow-up 
+                                services are available quarterly or monthly. We recommend these services 
+                                because they maintain your premises' pest protection throughout the year.</p>
+                        </li>
+                    </ul>
+                </div>    
+            </section>
         </main>
         
         <aside class="sidebar">
