add favicon code to html and link favicon images

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- favicon -->
+        <link rel="icon" href="NylstroomPestControlFavicon16by16.png" type="image/png" sizes="16x16">
+        <link rel="icon" href="NylstroomPestControlFavicon32by32.png" type="image/png" sizes="32x32">
         <title>Nylstroom Pest Conrol</title>
         <!-- font styles -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +20,23 @@
 
         <header class="header">
             <nav class="navbar">Navbar</nav>
-            <div>Hero Section</div>
+            <section class="header__hero hero">
+                <div class="hero__primaryHeadingContainer">
+                    <img src="" alt="" class="hero__heroLogoImg">
+                    <h1 class="hero__heroHeading heroHeading">
+                        <span class="heroHeading__heroHeadingPrimary">Nylstroom Pest Control</span>
+                        <span class="heroHeading__heroHeadingExperts">Experts</span>
+                        <span class="heroHeading__heroHeadingSecondary">Your Shield Against Unwanted Intruders: Expert Comprehensive Pest Management at Nylstroom Pest Control.</span>
+                        <span class="heroHeading__heroHeadingByline">Our services range from specialized IPM programs for food and health industries to commercial and domestic pest control, rodent control, termite management, and efficient fumigation services. Safeguard your space with our tailored solutions!</span>
+                    </h1>
+                </div>
+                <a class="hero__heroBtnContainer" href="#contactLink" target="_blank">
+                    <button class="btn btn--primary">Our Services</button>
+                </a>
+                <div class="hero__heroImgCompositionContainer">
+
+                </div>
+            </section>
         </header>
 
         <main class="main">
