add heroLogoImg and basic styling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav class="navbar">Navbar</nav>
             <section class="header__hero hero">
                 <div class="hero__primaryHeadingContainer">
-                    <img src="" alt="" class="hero__heroLogoImg">
+                    <img class="hero__heroLogoImg" src="./img/Images/WebsiteImages/NylstroomPestControlLogo500by500.webp" alt="Logo image of Nylstroom Pest Control in Modimolle." >
                     <h1 class="hero__heroHeading heroHeading">
                         <span class="heroHeading__heroHeadingPrimary">Nylstroom Pest Control</span>
                         <span class="heroHeading__heroHeadingExperts">Experts</span>
