change structure, content and styling of hero section

--- a/index.html
+++ b/index.html
@@ -21,17 +21,15 @@
         <header class="header">
             <nav class="navbar">Navbar</nav>
             <section class="header__hero hero">
-                <div class="hero__primaryHeadingContainer">
-                    <img class="hero__heroLogoImg" src="./img/Images/WebsiteImages/NylstroomPestControlLogo500by500.webp" alt="Logo image of Nylstroom Pest Control in Modimolle." >
-                    <h1 class="hero__heroHeading heroHeading">
-                        <span class="heroHeading__heroHeadingPrimary">Nylstroom Pest Control</span>
-                        <span class="heroHeading__heroHeadingExperts">Experts</span>
-                        <span class="heroHeading__heroHeadingSecondary">Your Shield Against Unwanted Intruders: Expert Comprehensive Pest Management at Nylstroom Pest Control.</span>
-                        <span class="heroHeading__heroHeadingByline">Our services range from specialized IPM programs for food and health industries to commercial and domestic pest control, rodent control, termite management, and efficient fumigation services. Safeguard your space with our tailored solutions!</span>
-                    </h1>
-                </div>
+                <h1 class="hero__heroHeading heroHeading">
+                    <span class="heroHeading__heroHeadingPrimary heroHeadingPrimary">
+                        <img class="heroHeadingPrimary__heroHeadingPrimaryLogoImg" src="./img/Images/WebsiteImages/NylstroomPestControlLogo500by500.webp" alt="Logo image of Nylstroom Pest Control in Modimolle." >
+                        <span class="heroHeadingPrimary__heroHeadingPrimaryText">Nylstoom Pest Control</span> 
+                    </span>
+                    <span class="heroHeading__heroHeadingByline">Serving Nylstroom, Naboomspruit, Vaalwater, Warmbad, Leeupoort and surrounding areas. From specialized IPM programs for food and health industries to commercial and domestic pest control, rodent control, termite management, and efficient fumigation services.</span>
+                </h1>
                 <a class="hero__heroBtnContainer" href="#contactLink" target="_blank">
-                    <button class="btn btn--primary">Our Services</button>
+                    <button class="btn btn--primary">Contact Us</button>
                 </a>
                 <div class="hero__heroImgCompositionContainer">
 
@@ -101,7 +99,7 @@
                                 <li><p class="services__paragraph paragraph paragraph--serviceAreaName"><span class="paragraph__serviceAreaName--warmbad">Bela-Bela</span> (Warmbad),</p></li>
                                 <li><p class="services__paragraph paragraph paragraph--serviceAreaName"><span class="paragraph__serviceAreaName--nylstroom">Modimolle</span> (Nylstroom),</p></li>
                                 <li><p class="services__paragraph paragraph paragraph--serviceAreaName"><span class="paragraph__serviceAreaName--nylstroom">Vaalwater</span>,</p></li>
-                                <li><p class="services__paragraph paragraph paragraph--serviceAreaName"><span class="paragraph__serviceAreaName--naboom">Mookgopong</span> (Naboomspruit),</p></li>
+                                <li><p class="services__paragraph paragraph paragraph--serviceAreaName"><span class="paragraph__serviceAreaName--naboom">Mookgopong</span> (Naboomspruit), and</p></li>
                                 <li><p class="services__paragraph paragraph paragraph--serviceAreaName"><span class="paragraph__serviceAreaName--leeupoort">Leeupoort</span>.</p></li>
                             </ul>
                         </article>
