add structure, content and styling to heroCredentials

--- a/index.html
+++ b/index.html
@@ -21,18 +21,35 @@
         <header class="header">
             <nav class="navbar">Navbar</nav>
             <section class="header__hero hero">
-                <h1 class="hero__heroHeading heroHeading">
-                    <span class="heroHeading__heroHeadingPrimary heroHeadingPrimary">
-                        <img class="heroHeadingPrimary__heroHeadingPrimaryLogoImg" src="./img/Images/WebsiteImages/NylstroomPestControlLogo500by500.webp" alt="Logo image of Nylstroom Pest Control in Modimolle." >
-                        <span class="heroHeadingPrimary__heroHeadingPrimaryText">Nylstoom Pest Control</span> 
-                    </span>
-                    <span class="heroHeading__heroHeadingByline">Serving Nylstroom, Naboomspruit, Vaalwater, Warmbad, Leeupoort and surrounding areas. From specialized IPM programs for food and health industries to commercial and domestic pest control, rodent control, termite management, and efficient fumigation services.</span>
-                </h1>
-                <a class="hero__heroBtnContainer" href="#contactLink" target="_blank">
-                    <button class="btn btn--primary">Contact Us</button>
-                </a>
-                <div class="hero__heroImgCompositionContainer">
-
+                <div class="hero__heroCtaContainer">
+                    <h1 class="hero__heroHeading heroHeading">
+                        <span class="heroHeading__heroHeadingPrimary heroHeadingPrimary">
+                            <img class="heroHeadingPrimary__heroHeadingPrimaryLogoImg" src="./img/Images/WebsiteImages/NylstroomPestControlLogo500by500.webp" alt="Logo image of Nylstroom Pest Control in Modimolle." >
+                            <span class="heroHeadingPrimary__heroHeadingPrimaryText">Nylstoom Pest Control</span> 
+                        </span>
+                        <span class="heroHeading__heroHeadingByline">Serving Nylstroom, Naboomspruit, Vaalwater, Warmbad, Leeupoort and surrounding areas. From specialized IPM programs for food and health industries to commercial and domestic pest control, rodent control, termite management, and efficient fumigation services.</span>
+                    </h1>
+                    <a class="hero__heroBtnContainer" href="#contactLink" target="_blank">
+                        <button class="btn btn--primary">Contact Us</button>
+                    </a>
+                </div>
+                <div class="hero__heroCredentialsContainer">
+                    <h3 class="hero__headingH3 headingH3 headingH3--heroCredentials">Certified & Accredited:</h3>
+                    <p class="hero__paragraph paragraph paragraph--heroCredentials">Registered with Department of Agriculture and Member of South African Pest Control Association</p>
+                    <div class="hero__figureContainer">
+                        <figure class="hero__figure">
+                            <img class="hero__heroFigureImg" src="./img/Images/WebsiteImages/NylstroomPestDeptAgriLogo.webp" alt="">
+                            <figcaption class="hero__figcaption">
+                                <p class="hero__paragraph paragraph paragraph--heroFigcaption">Registered with <br>Department of Agriculture</p>
+                            </figcaption>
+                        </figure>
+                        <figure class="hero__figure">
+                            <img class="hero__heroFigureImg" src="./img/Images/WebsiteImages/NylstroomPestSAPCA.webp" alt="">
+                            <figcaption class="hero__figcaption">
+                                <p class="hero__paragraph paragraph paragraph--heroFigcaption">Member of <br>South African Pest Control Association</p>
+                            </figcaption>
+                        </figure>
+                    </div>
                 </div>
             </section>
         </header>
