add structure, content and styles to about section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="hero__heroCredentialsContainer">
                     <h3 class="hero__headingH3 headingH3 headingH3--heroCredentials">Certified & Accredited:</h3>
-                    <p class="hero__paragraph paragraph paragraph--heroCredentials">Registered with Department of Agriculture and Member of South African Pest Control Association</p>
+                    <p class="hero__paragraph paragraph paragraph--heroCredentials">Registered with Department of Agriculture and Member of the South African Pest Control Association</p>
                     <div class="hero__figureContainer">
                         <figure class="hero__figure">
                             <img class="hero__heroFigureImg" src="./img/Images/WebsiteImages/NylstroomPestDeptAgriLogo.webp" alt="">
@@ -55,7 +55,35 @@
         </header>
 
         <main class="main">
-            <section class="main__about">About Section</section>
+            <section class="main__about about">
+                <h2 class="about__headingH2 headingH2 headingH2--about">About</h2>
+                <p class="about__paragraph paragraph paragraph--about">Nylstroom Pest Control, 
+                    based in Modimolle, is your trusted ally in eliminating pests and 
+                    ensuring a pest-free environment. With a commitment to excellence, 
+                    we offer professional pest control services tailored to meet your 
+                    specific needs. Our team, registered with the Department of 
+                    Agriculture and proud members of the South African Pest Control 
+                    Association, delivers effective solutions with expertise and 
+                    dedication. Count on us to safeguard your home or business 
+                    against unwanted intruders.</p>
+                    <figure class="about__figure">
+                        <img class="about__figureImg about__img--figureImgOwner" src="./img/Images/WebsiteImages/NylstroomPestProfilePhotoJohan.webp" alt="">
+                        <figcaption class="about__figcaption">
+                            <h3 class="about__headingH3 headingH3 headingH3--aboutOwner">Johan du Plessis</h3>
+                            <h4 class="about__headingH4 headingH4 headingH4--aboutOwner">Owner & Manager</h4>
+                            <p class="about__paragraph paragraph paragraph--aboutOwner">Johan du Plessis, 
+                                owner and manager of Nylstroom Pest Control, brings over 25 years of 
+                                invaluable experience in the pest control industry to the table. As a 
+                                resident of Nylstroom, Johan's deep understanding of local 
+                                pest dynamics coupled with his expertise ensures effective solutions 
+                                tailored to the region's specific needs. Passionate about delivering 
+                                top-notch service, Johan leads his team with dedication and a 
+                                commitment to excellence, making Nylstroom Pest Control the go-to 
+                                choice for pest management in Modimolle and beyond.</p>
+                        </figcaption>
+                    </figure>
+                
+            </section>
             <section class="main__services services">
                 <h2 class="services__headingH2 headingH2 headingH2--services">Our Services</h2>
                 <p class="services__paragraph paragraph paragraph--services">Discover comprehensive 
