change content and styles of footer section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- font styles -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Days+One&family=Lato:wght@400;700;900&family=Montserrat:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Days+One&family=Lato:wght@400; 500; 700;900&family=Montserrat:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
         <!-- website styles -->
         <link rel="stylesheet" href="./css/styles.css">
     </head>
@@ -24,7 +24,7 @@
                 <div class="hero__heroCtaContainer">
                     <h1 class="hero__heroHeading heroHeading">
                         <span class="heroHeading__heroHeadingPrimary heroHeadingPrimary">
-                            <img class="heroHeadingPrimary__heroHeadingPrimaryLogoImg" src="./img/Images/WebsiteImages/NylstroomPestControlLogo500by500.webp" alt="Logo image of Nylstroom Pest Control in Modimolle." >
+                            <img class="heroHeadingPrimary__heroHeadingPrimaryLogoImg" src="./img/Images/WebsiteImages/NylstroomPestLogo500by500.webp" alt="Logo image of Nylstroom Pest Control in Modimolle." >
                             <span class="heroHeadingPrimary__heroHeadingPrimaryText">Nylstoom Pest Control</span> 
                         </span>
                         <span class="heroHeading__heroHeadingByline">Serving Nylstroom, Naboomspruit, Vaalwater, Warmbad, Leeupoort and surrounding areas. From specialized IPM programs for food and health industries to commercial and domestic pest control, rodent control, termite management, and efficient fumigation services.</span>
@@ -275,11 +275,10 @@
             </div>    
         </address>        
         <footer class="footer">
-            <figure>
-                <img src="" alt="">
-                <figcaption>
-                    <h3 class="footer__footerHeadingH3 headingH3 headingH3--websiteNavigation">Nylstroom Pest Control</h3>
-                    
+            <figure class="footer__figure">
+                <img class="footer__logoImg" src="./img/Images/WebsiteImages/NylstroomPestLogo500by500.webp" alt="">
+                <figcaption class="footer__figcaption">
+                    <h3 class="footer__headingH3 headingH3 headingH3--footerFigure">Nylstroom Pest <br>Control</h3>
                 </figcaption>
             </figure>
             <nav class="footer__footerNavigationContainer">
@@ -289,14 +288,14 @@
                             <li class="footer__footerNavitem">
                                 <a href="" class="footer__footerNavlink navlink navlink--footerNavlink">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M21.4286 0H2.57143C1.88944 0 1.23539 0.270918 0.753154 0.753154C0.270918 1.23539 0 1.88944 0 2.57143L0 21.4286C0 22.1106 0.270918 22.7646 0.753154 23.2468C1.23539 23.7291 1.88944 24 2.57143 24H9.92411V15.8405H6.54911V12H9.92411V9.07286C9.92411 5.74339 11.9063 3.90429 14.9421 3.90429C16.3961 3.90429 17.9164 4.16357 17.9164 4.16357V7.43143H16.2413C14.5907 7.43143 14.0759 8.45571 14.0759 9.50625V12H17.7605L17.1712 15.8405H14.0759V24H21.4286C22.1106 24 22.7646 23.7291 23.2468 23.2468C23.7291 22.7646 24 22.1106 24 21.4286V2.57143C24 1.88944 23.7291 1.23539 23.2468 0.753154C22.7646 0.270918 22.1106 0 21.4286 0Z" fill="#20cb72ff"/>
+                                        <path d="M21.4286 0H2.57143C1.88944 0 1.23539 0.270918 0.753154 0.753154C0.270918 1.23539 0 1.88944 0 2.57143L0 21.4286C0 22.1106 0.270918 22.7646 0.753154 23.2468C1.23539 23.7291 1.88944 24 2.57143 24H9.92411V15.8405H6.54911V12H9.92411V9.07286C9.92411 5.74339 11.9063 3.90429 14.9421 3.90429C16.3961 3.90429 17.9164 4.16357 17.9164 4.16357V7.43143H16.2413C14.5907 7.43143 14.0759 8.45571 14.0759 9.50625V12H17.7605L17.1712 15.8405H14.0759V24H21.4286C22.1106 24 22.7646 23.7291 23.2468 23.2468C23.7291 22.7646 24 22.1106 24 21.4286V2.57143C24 1.88944 23.7291 1.23539 23.2468 0.753154C22.7646 0.270918 22.1106 0 21.4286 0Z" fill="#001d49"/>
                                     </svg>
                                 </a>
                             </li>
                             <li class="footer__footerNavitem">
                                 <a href="" class="footer__footerNavlink navlink navlink--footerNavlink">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M17.0365 0H6.97548C2.6053 0 0 2.604 0 6.972V17.016C0 21.396 2.6053 24 6.97548 24H17.0245C21.3947 24 24 21.396 24 17.028V6.972C24.012 2.604 21.4067 0 17.0365 0ZM12.006 16.656C9.4367 16.656 7.34766 14.568 7.34766 12C7.34766 9.432 9.4367 7.344 12.006 7.344C14.5753 7.344 16.6643 9.432 16.6643 12C16.6643 14.568 14.5753 16.656 12.006 16.656ZM19.1135 5.856C19.0535 6 18.9695 6.132 18.8614 6.252C18.7413 6.36 18.6093 6.444 18.4652 6.504C18.3211 6.564 18.1651 6.6 18.009 6.6C17.6848 6.6 17.3847 6.48 17.1565 6.252C17.0485 6.132 16.9645 6 16.9044 5.856C16.8444 5.712 16.8084 5.556 16.8084 5.4C16.8084 5.244 16.8444 5.088 16.9044 4.944C16.9645 4.788 17.0485 4.668 17.1565 4.548C17.4327 4.272 17.8529 4.14 18.2371 4.224C18.3211 4.236 18.3932 4.26 18.4652 4.296C18.5372 4.32 18.6093 4.356 18.6813 4.404C18.7413 4.44 18.8014 4.5 18.8614 4.548C18.9695 4.668 19.0535 4.788 19.1135 4.944C19.1736 5.088 19.2096 5.244 19.2096 5.4C19.2096 5.556 19.1736 5.712 19.1135 5.856Z" fill="#20cb72ff"/>
+                                        <path d="M17.0365 0H6.97548C2.6053 0 0 2.604 0 6.972V17.016C0 21.396 2.6053 24 6.97548 24H17.0245C21.3947 24 24 21.396 24 17.028V6.972C24.012 2.604 21.4067 0 17.0365 0ZM12.006 16.656C9.4367 16.656 7.34766 14.568 7.34766 12C7.34766 9.432 9.4367 7.344 12.006 7.344C14.5753 7.344 16.6643 9.432 16.6643 12C16.6643 14.568 14.5753 16.656 12.006 16.656ZM19.1135 5.856C19.0535 6 18.9695 6.132 18.8614 6.252C18.7413 6.36 18.6093 6.444 18.4652 6.504C18.3211 6.564 18.1651 6.6 18.009 6.6C17.6848 6.6 17.3847 6.48 17.1565 6.252C17.0485 6.132 16.9645 6 16.9044 5.856C16.8444 5.712 16.8084 5.556 16.8084 5.4C16.8084 5.244 16.8444 5.088 16.9044 4.944C16.9645 4.788 17.0485 4.668 17.1565 4.548C17.4327 4.272 17.8529 4.14 18.2371 4.224C18.3211 4.236 18.3932 4.26 18.4652 4.296C18.5372 4.32 18.6093 4.356 18.6813 4.404C18.7413 4.44 18.8014 4.5 18.8614 4.548C18.9695 4.668 19.0535 4.788 19.1135 4.944C19.1736 5.088 19.2096 5.244 19.2096 5.4C19.2096 5.556 19.1736 5.712 19.1135 5.856Z" fill="#001d49"/>
                                     </svg>
                                 </a>
                             </li>
@@ -327,10 +326,10 @@
                 <p class="footer__paragraph paragraph paragraph--address">Address: 86 Pleinstraat, Modimolle, 0510</p>
             </address>
             <div class="footer__footerCopyrightAndDevContainer">
-                <p class="footer__footerCopyrightParagraph paragraph paragraph--footerCopyright"><span>Copyright &copy:</span> <span>2024</span><span>Nylstroom Pest Control</span> </p>
+                <p class="footer__footerCopyrightParagraph paragraph paragraph--footerCopyright"><span>Copyright &copy:</span> <span>2024</span> <span>Nylstroom Pest Control</span> </p>
                 <p class="footer__footerDeveloperParagraph paragraph paragraph--footerDeveloper">
-                    designed and developed by:
-                    <a class="navlink navlink--footerNavlink" href="https://schalkvandyk.com" target="_blank">
+                    designed and developed by: 
+                    <a class="navlink navlink--footerNavlinkDev" href="https://schalkvandyk.com" target="_blank">
                         Schalk van Dyk &rarr;
                     </a>
                 </p>
